--- a/journal_clubs/lec-28-ago-2020/slides.ipynb
+++ b/journal_clubs/lec-28-ago-2020/slides.ipynb
@@ -8,57 +8,266 @@
     }
    },
    "source": [
-    "Titulo"
+    "# Me dicen que mi código es horrible😩 . ¿Por qué no le dejan el tema de la belleza a lxs teoricxs? Y, ¿me explican por qué lo dicen y cómo puedo mejorarlo?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Why this talk?\n",
-    "\n",
-    "Como fisiques no estamos formados para programar\n",
-    "\n",
-    "- \n",
-    "-\n",
-    "-\n",
-    "-"
+    "Why this talk?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Que es refactoring"
+    "<!-- https://stackoverflow.com/questions/6759791/how-do-i-move-forward-and-backward-between-commits-in-git/33668818#33668818 -->"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Que es un objeto\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "![](materiales/imagenes/why-this-is-so-hard.gif)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ejemplo de resolver un problema en\n",
-    "\n",
-    "- coordenadas cartesianas\n",
-    "- coordenadas polares\n",
-    "- coordenadas canonicas"
+    "Como fisique no estoy formado para producir código \"productivo\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```Make the change easy "
+    "- Me enfoco en los detalles y queremos saber el como "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Vi los casos especificos y aislados"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- No se extrapolar a casos mas generales "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Lo que produzco no esta pensado a ser reutilizado"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- No se anticiparme a casos particulares y limites"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](materiales/imagenes/not-meant-for-you.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](materiales/imagenes/corporation.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ejemplo:\n",
+    "\n",
+    "Resolver un problema de cinematica"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](materiales/imagenes/circulo.svg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ecuaciones de Newton\n",
+    "\n",
+    "$F = m*a$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Coordenadas cartesianas* :  \n",
+    "\n",
+    "$t, x, y$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Coordenadas polares:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$t, r, \\theta$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](materiales/imagenes/elipse.svg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](materiales/imagenes/elipse-rotada.svg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ecuaciones de Euler-Lagrange, Ecuaciones de Hamilton\n",
+    "\n",
+    "Coordenadas canonicas:\n",
+    "\n",
+    "$t, p, q$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<!-- ![](materiales/imagenes/') -->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ¿Qué es un objeto?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 👤"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'homunculo'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'homunculo'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "👤 ✉️"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'HOMUNCULO'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'homunculo'.upper()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "👤 💌 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['h', 'muncul', '']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'homunculo'.split('o')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "👤 💌 🖃 👤 ✉️ 🧧 👤"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ¿Qué es el *refactoring*?"
    ]
   },
   {
@@ -76,7 +285,72 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# SOLID"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Single Responsability Principle"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Open Close Principle\n",
+    "\n",
+    "Objects should be open for extension, but closed for modification."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<blockquote class=\"twitter-tweet\"><p lang=\"en\" dir=\"ltr\">for each desired change, make the change easy (warning: this may be hard), then make the easy change</p>&mdash; Kent Beck (@KentBeck) <a href=\"https://twitter.com/KentBeck/status/250733358307500032?ref_src=twsrc%5Etfw\">September 25, 2012</a></blockquote> <script async src=\"https://platform.twitter.com/widgets.js\" charset=\"utf-8\"></script>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$ H  = \\frac{p^2}{2*m} $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$ H  = \\frac{p^2}{2*m} + q^2 $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$ H  = \\frac{p^2}{2*m} + q^2 + ... + V(p,q) $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](materiales/imagenes/sm-lagrangian.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](materiales/imagenes/demo-time.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](materiales/imagenes/aprendizaje.png)"
    ]
   },
   {
@@ -90,15 +364,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Preparatory refactoring](https://martinfowler.com/articles/preparatory-refactoring-example.html)"
+    "# Referencias"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "[Preparatory refactoring](https://martinfowler.com/articles/preparatory-refactoring-example.html)"
+   ]
   }
  ],
  "metadata": {
@@ -107,8 +381,35 @@
    "filteredIndividual": [],
    "filteredRestart": [],
    "filteredType": [],
-   "hash": "f780c3871cfe3fc78e667a65705a3a248bd120f7",
+   "hash": "c0fb56588a5248a6862fd6c9f6344e8ac6420852",
    "visible": [
+    {
+     "cellId": "group",
+     "hash": "c0de46ba034d710c2b2406a37ee6816be9634aa0",
+     "reason": "This groups other lint messages",
+     "reportId": "group",
+     "reportType": "hiddenstate",
+     "suggestion": null,
+     "text": "Hidden State"
+    },
+    {
+     "cellId": 24,
+     "hash": "c9acb0c674e6b00278b8635fea75d18fecb24d7c",
+     "reason": "A skip in the execution count might indicate the presence of a hidden state caused by a cell that does not exist anymore. Hidden states might prevent cells from executing or producing the same results, hampering the reproducibility.",
+     "reportId": "h4",
+     "reportType": "hiddenstate",
+     "suggestion": "Please consider re-running the notebook to guarantee the reproducibility.",
+     "text": "Cell 24 skips the execution count"
+    },
+    {
+     "cellId": 26,
+     "hash": "c9007a4a75e72bf422448a00573d403e94f169c2",
+     "reason": "A skip in the execution count might indicate the presence of a hidden state caused by a cell that does not exist anymore. Hidden states might prevent cells from executing or producing the same results, hampering the reproducibility.",
+     "reportId": "h4",
+     "reportType": "hiddenstate",
+     "suggestion": "Please consider re-running the notebook to guarantee the reproducibility.",
+     "text": "Cell 26 skips the execution count"
+    },
     {
      "cellId": "group",
      "hash": "19d3d3d153f22e318cbe061df9e685ba5165b0aa",
@@ -119,13 +420,13 @@
      "text": "Confuse Notebook"
     },
     {
-     "cellId": 8,
-     "hash": "a1b0496947cd2ec75817e08aa2c0cba3f16efd89",
+     "cellId": 42,
+     "hash": "9559402cfb104003e54faa0b015462d62cda8f7f",
      "reason": "Empty cells in between executable ones occupy space and might impact the readability of the notebook.",
      "reportId": "c3",
      "reportType": "confusenotebook",
      "suggestion": "Please consider removing it to improve the readability.",
-     "text": "Cell 8 is empty in the middle of the notebook"
+     "text": "Cell 42 is empty in the middle of the notebook"
     }
    ]
   },
