Agregar presentacion completa y exportarla a html

--- a/journal_clubs/lec-28-ago-2020/slides.ipynb
+++ b/journal_clubs/lec-28-ago-2020/slides.ipynb
@@ -13,100 +13,156 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Why this talk?"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "<!-- https://stackoverflow.com/questions/6759791/how-do-i-move-forward-and-backward-between-commits-in-git/33668818#33668818 -->"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "![](materiales/imagenes/why-this-is-so-hard.gif)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "Como fisique no estoy formado para producir código \"productivo\""
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
-    "- Me enfoco en los detalles y queremos saber el como "
+    "- Me enfoco en los detalles y quiero saber el **cómo** "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
-    "- Vi los casos especificos y aislados"
+    "- Estudié los casos específicos y aislados "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
-    "- No se extrapolar a casos mas generales "
+    "- No sé extrapolar a casos más generales "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
-    "- Lo que produzco no esta pensado a ser reutilizado"
+    "- Lo que produzco no está pensado para ser reutilizado"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
-    "- No se anticiparme a casos particulares y limites"
+    "- No sé anticiparme a casos particulares y límites"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "![](materiales/imagenes/not-meant-for-you.jpg)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "![](materiales/imagenes/corporation.jpg)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Ejemplo:\n",
     "\n",
-    "Resolver un problema de cinematica"
+    "Resolver un problema de cinemática"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "![](materiales/imagenes/circulo.svg)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "### Ecuaciones de Newton\n",
     "\n",
@@ -115,7 +171,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "*Coordenadas cartesianas* :  \n",
     "\n",
@@ -124,68 +184,84 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
-    "Coordenadas polares:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Coordenadas polares:\n",
+    "\n",
     "$t, r, \\theta$"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "![](materiales/imagenes/elipse.svg)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "![](materiales/imagenes/elipse-rotada.svg)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "### Ecuaciones de Euler-Lagrange, Ecuaciones de Hamilton\n",
     "\n",
-    "Coordenadas canonicas:\n",
+    "Coordenadas canónicas:\n",
     "\n",
     "$t, p, q$"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<!-- ![](materiales/imagenes/') -->"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## ¿Qué es un objeto?"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "# 👤"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -193,7 +269,7 @@
        "'homunculo'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,15 +280,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "👤 ✉️"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -220,7 +304,7 @@
        "'HOMUNCULO'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,15 +315,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "👤 💌 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -247,7 +339,7 @@
        "['h', 'muncul', '']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,21 +350,57 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "👤 💌 🖃 👤 ✉️ 🧧 👤"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- API ( *Aplication Programming Interface** )\n",
+    "- Interfase\n",
+    "- Protocolo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "![](https://1.bp.blogspot.com/--n2dfQmgeqM/XMuYzV2BkaI/AAAAAAAAAqQ/D1ObtSZB2bUoaINZrrntXT3I3Zjw5NwgQCLcBGAs/s1600/ini1140.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## ¿Qué es el *refactoring*?"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "```Refactoring is the process of changing a software\n",
     "system in such a way that it does not alter the external\n",
@@ -283,21 +411,87 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "```python\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "t,x = np.loadtxt('a_1.txt')\n",
+    "def f(x,t,y):\n",
+    "    return ( x[0] * t**2 + x[1] * t**4 + x[2] - y )   \n",
+    "\n",
+    "from scipy.optimize import least_squares\n",
+    "x0 = np.array([0, 0, 0])\n",
+    "res = least_squares(f, x0, args=(t,x), verbose=2, loss='cauchy', method='dogbox',ftol=1e-10)\n",
+    "y = res.x[0] * t**4 + res.x[1] * t**2 + res.x[2]\n",
+    "plt.plot(t,x,'ok')\n",
+    "plt.plot(t,y,'r')\n",
+    "ax = plt.gca()\n",
+    "ax.set_ylim(-2,2)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# SOLID"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "## Single Responsability Principle"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "```python\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "t,x = np.loadtxt('a_1.txt')\n",
+    "def f(x,t,y):\n",
+    "    return ( x[0] * t**2 + x[1] * t**4 + x[2] - y )   \n",
+    "\n",
+    "from scipy.optimize import least_squares\n",
+    "x0 = np.array([0, 0, 0])\n",
+    "res = least_squares(f, x0, args=(t,x), verbose=2, loss='cauchy', method='dogbox',ftol=1e-10)\n",
+    "y = res.x[0] * t**4 + res.x[1] * t**2 + res.x[2]\n",
+    "plt.plot(t,x,'ok')\n",
+    "plt.plot(t,y,'r')\n",
+    "ax = plt.gca()\n",
+    "ax.set_ylim(-2,2)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "## Open Close Principle\n",
     "\n",
@@ -306,76 +500,216 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "```python\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "t,x = np.loadtxt('a_1.txt')\n",
+    "def f(x,t,y):\n",
+    "    return ( x[0] * t**2 + x[1] * t**4 + x[2] - y )   \n",
+    "\n",
+    "from scipy.optimize import least_squares\n",
+    "x0 = np.array([0, 0, 0])\n",
+    "res = least_squares(f, x0, args=(t,x), verbose=2, loss='cauchy', method='dogbox',ftol=1e-10)\n",
+    "y = res.x[0] * t**4 + res.x[1] * t**2 + res.x[2]\n",
+    "plt.plot(t,x,'ok')\n",
+    "plt.plot(t,y,'r')\n",
+    "ax = plt.gca()\n",
+    "ax.set_ylim(-2,2)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "<blockquote class=\"twitter-tweet\"><p lang=\"en\" dir=\"ltr\">for each desired change, make the change easy (warning: this may be hard), then make the easy change</p>&mdash; Kent Beck (@KentBeck) <a href=\"https://twitter.com/KentBeck/status/250733358307500032?ref_src=twsrc%5Etfw\">September 25, 2012</a></blockquote> <script async src=\"https://platform.twitter.com/widgets.js\" charset=\"utf-8\"></script>"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "$ H  = \\frac{p^2}{2*m} $"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "$ H  = \\frac{p^2}{2*m} + q^2 $"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "$ H  = \\frac{p^2}{2*m} + q^2 + ... + V(p,q) $"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "![](materiales/imagenes/sm-lagrangian.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "![](materiales/imagenes/demo-time.jpg)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "![](materiales/imagenes/aprendizaje.png)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Objetos\n",
+    "\n",
+    "*Programming objects/computing objects*\n",
+    "\n",
+    "Pensar a objeto como pequeñas entidades inteligentes con las cuales podemos interactuar mediante mensajes "
+   ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Testing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- *Testear* es bueno"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- El *Testing* es complicado de realizar, al principio. **Necesita práctica** "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- El *Testing* es la presión que fuerza el diseño de tu código"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- Los *Tests* son parte del código. `Código no testeado es código que no existe`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- Los *Tests* son los primeros usuarios de tu código"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "# Referencias"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
-    "[Preparatory refactoring](https://martinfowler.com/articles/preparatory-refactoring-example.html)"
+    "[Preparatory refactoring](https://martinfowler.com/articles/preparatory-refactoring-example.html)\n",
+    "\n",
+    "[Code Smells](https://github.com/akielbowicz/presentations/tree/master/meetup)"
    ]
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "julynter-results": {
    "filteredId": [],
    "filteredIndividual": [],
