--- a/slides/slides.ipynb
+++ b/slides/slides.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# Une para todes y todes para une\n",
     "\n",
-    "23 de septiembre de 2020"
+    "*23 de septiembre de 2020*"
    ]
   },
   {
@@ -20,7 +20,9 @@
      "slide_type": "slide"
     }
    },
-   "source": []
+   "source": [
+    "[Slides](https://github.com/akielbowicz/presentations/tree/pyar_pairprogramming)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -29,7 +31,9 @@
      "slide_type": "slide"
     }
    },
-   "source": []
+   "source": [
+    "Para les voluntaries: [saxa.xyz/2prog](saxa.xyz/2prog)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -38,7 +42,9 @@
      "slide_type": "slide"
     }
    },
-   "source": []
+   "source": [
+    "Encuestas [itempool.com/sasha/live](https://itempool.com/sasha/live)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -47,7 +53,31 @@
      "slide_type": "slide"
     }
    },
-   "source": []
+   "source": [
+    "# Que es el Pair Programming?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "- Una sola maquina"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- varias personas programan ( una a la vez ) "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -56,7 +86,42 @@
      "slide_type": "slide"
     }
    },
-   "source": []
+   "source": [
+    "## Probar o implementar una idea nueva"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- Vamos pasando el teclado"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- le que esta al teclado implementa"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- le otre piensa expone las ideas "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -65,7 +130,31 @@
      "slide_type": "slide"
     }
    },
-   "source": []
+   "source": [
+    "## Transferir Conocimiento"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- le que recibe va al teclado"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- le que brinda habla, explica, comenta"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -74,7 +163,31 @@
      "slide_type": "slide"
     }
    },
-   "source": []
+   "source": [
+    "## Exponer o poner a prueba una idea"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- Le que implemento solo responde preguntas ( Oraculo )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- Le que esta probando puede preguntar y hacer comentarios de la implementacion  "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -83,7 +196,11 @@
      "slide_type": "slide"
     }
    },
-   "source": []
+   "source": [
+    "Ya se imaginan lo que es el Mob Programming ...\n",
+    "\n",
+    "Mob ~ Multitud"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -92,7 +209,11 @@
      "slide_type": "slide"
     }
    },
-   "source": []
+   "source": [
+    "# Demo Time\n",
+    "\n",
+    "saxa.xyz/2prog"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -101,7 +222,42 @@
      "slide_type": "slide"
     }
    },
-   "source": []
+   "source": [
+    "# Como fue posible todo esto?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "mybinder "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "code-server"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "jupyter_vscode_proxy"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,7 +266,11 @@
      "slide_type": "slide"
     }
    },
-   "source": []
+   "source": [
+    "More info \n",
+    "\n",
+    "[On Pair Programming](https://martinfowler.com/articles/on-pair-programming.html)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -119,34 +279,9 @@
      "slide_type": "slide"
     }
    },
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": []
+   "source": [
+    "Muchas Gracias!"
+   ]
   }
  ],
  "metadata": {
